--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -25,15 +25,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 16,
       "metadata": {},
       "outputs": [
@@ -120,7 +111,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -314,7 +305,7 @@
         "df = pd.read_csv(url)\n",
         "\n",
         "print(\"Columns:\", df.columns.tolist())\n",
-        "df.head()\n"
+        "df.head()"
       ]
     },
     {
